# pixi-import-repro

./: README.md
app/: pyproject.toml
app/src/app/: app.py
