[project]
authors = [{name = "Ben Moss", email = "bmoss40@bloomberg.com"}]
dependencies = []
description = "Add a short description here"
name = "app"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
app = { path = ".", editable = true }

[tool.pixi.tasks]
